--- a/public/progress.css
+++ b/public/progress.css
@@ -24,3 +24,8 @@
   -ms-transform: rotate(3deg) translate(0px, -4px);
   transform: rotate(3deg) translate(0px, -4px);
 }
+
+.center{
+  display: flex;
+  place-content: center;
+}
